--- a/Owls/appsettings.json
+++ b/Owls/appsettings.json
@@ -7,10 +7,17 @@
   },
   "ConnectionStrings": {
     "Db": "Data Source=ZOD;Initial Catalog=ClothesStore;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;",
-    "Dpl": "",
+    "Dpl": ""
+  },
+  "EmailSettings": {
+    "FromAddress": "adadda413@gmail.com",
+    "Password": "nyek ttoc ryqa nifi",
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "EnableSsl": true
   },
   "FirebaseStorage": {
     "BusketUrl": "store-96146.appspot.com"
   },
-    "AllowedHosts": "*"
-  }
+  "AllowedHosts": "*"
+}
