--- a/Owls/appsettings.json
+++ b/Owls/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "Db": "Data Source=ZOD;Initial Catalog=ClothesStore;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;",
-    "Dpl": ""
+    "Db": "Data Source=Zod;Initial Catalog=ClothesStore;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;",
+    "Dpl": "workstation id=Clothes.mssql.somee.com;packet size=4096;user id=zod123_SQLLogin_1;pwd=pyqpi2lhju;data source=Clothes.mssql.somee.com;persist security info=False;initial catalog=Clothes;TrustServerCertificate=True"
   },
   "EmailSettings": {
     "FromAddress": "adadda413@gmail.com",
